--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -445,15 +445,15 @@
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
       <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
-      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
-      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
-      <li><a href="http://www.preston.gov.uk" class="govuk-link">Preston City Council</a></li>
-      <li><a href="http://www.iwight.com" class="govuk-link">Isle of Wight Council</a></li>
-      <li><a href="https://gov.wales/covid-19-alert-levels" class="govuk-link">Coronavirus (COVID-19) alert levels in Wales - GOV.WALES</a></li>
-      <li><a href="http://www.staffsmoorlands.gov.uk" class="govuk-link">Staffordshire Moorlands District Council</a></li>
+      <li><a href="http://www.dorsetforyou.com/county" class="govuk-link">Dorset County Council</a></li>
+      <li><a href="http://www.bromley.gov.uk" class="govuk-link">London Borough of Bromley Council</a></li>
+      <li><a href="http://www.inverclyde.gov.uk" class="govuk-link">Inverclyde Council</a></li>
       <li><a href="http://www.cheltenham.gov.uk" class="govuk-link">Cheltenham Borough Council</a></li>
-      <li><a href="http://www.boston.gov.uk" class="govuk-link">Boston Borough Council</a></li>
-      <li><a href="http://www.southhams.gov.uk" class="govuk-link">South Hams District Council</a></li>
+      <li><a href="http://www.castlereagh.gov.uk" class="govuk-link">Castlereagh Borough Council</a></li>
+      <li><a href="http://www.birmingham.gov.uk" class="govuk-link">Birmingham City Council</a></li>
+      <li><a href="https://nationalcareersservice.direct.gov.uk/advice/courses/" class="govuk-link">Courses and learning - National Careers Service</a></li>
+      <li><a href="http://www.burnley.gov.uk/" class="govuk-link">Burnley Borough Council</a></li>
+      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
