--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.bromley.gov.uk" class="govuk-link">London Borough of Bromley Council</a></li>
+      <li><a href="https://www.lewes-eastbourne.gov.uk" class="govuk-link">Lewes District Council</a></li>
       <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
-      <li><a href="http://www.dorsetforyou.com/county" class="govuk-link">Dorset County Council</a></li>
-      <li><a href="http://www.cheltenham.gov.uk" class="govuk-link">Cheltenham Borough Council</a></li>
+      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
       <li><a href="http://www.southsomerset.gov.uk" class="govuk-link">South Somerset District Council</a></li>
       <li><a href="http://www.preston.gov.uk" class="govuk-link">Preston City Council</a></li>
       <li><a href="http://www.waverley.gov.uk/" class="govuk-link">Waverley Borough Council</a></li>
-      <li><a href="http://www.manchester.gov.uk" class="govuk-link">Manchester City Council</a></li>
-      <li><a href="http://www.iwight.com" class="govuk-link">Isle of Wight Council</a></li>
-      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
+      <li><a href="http://www.barnet.gov.uk/" class="govuk-link">London Borough of Barnet Council</a></li>
+      <li><a href="https://covid19.nhs.uk/" class="govuk-link">Get the NHS COVID-19 app</a></li>
+      <li><a href="https://www.moneyadviceservice.org.uk/en/categories/managing-debt" class="govuk-link">Debt management - Money Advice Service</a></li>
+      <li><a href="http://www.calderdale.gov.uk" class="govuk-link">Calderdale Metropolitan Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
