--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/indian-ocean-tsunami-10th-anniversary-prime-ministers-message">Indian Ocean tsunami 10th anniversary: Prime Minister&rsquo;s message</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/queen-elizabeth-land-commemorative-coins-released">Queen Elizabeth Land Commemorative Coins released</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/231029.es">Empresa y Derechos Humanos: Agenda Pública y Privada</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-minister-impressed-with-sa-leg-of-bloodhound-education-project--2">British Minister impressed with SA leg of Bloodhound education project</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services-for-british-nationals--5">Changes to passport services for British nationals</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/british-embassy-provides-english-classes-to-costa-rican-police-officers--2">British Embassy provides English classes to Costa Rican Police Officers</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/digital-diplomacy">Digital Diplomacy</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/220494.es-419">Medirán emisiones de metano con muestras tomadas en Chacaltaya</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/294171.es-419">Ministro Británico de Estado para América Latina felicita al nuevo Vicepresidente de Guatemala</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/paris-saint-germain-v-chelsea-travel-advice--2">Paris Saint-Germain v Chelsea travel advice</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/human-rights-and-democracy-report-launch">Human Rights and Democracy Report launch</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-job-opportunity-at-the-british-embassy-buenos-aires--3">New job opportunity at the British Embassy Buenos Aires</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/271980.es-419">Resumen de la Visita Real del Príncipe de Gales y la Duquesa de Cornwall a México</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-food-needs-of-vulnerable-afghans">UK supports food needs of vulnerable Afghans</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/253325.pt">Reino Unido busca ampliar parcerias para Rio 2016</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
