--- a/document-types/asylum_support_decision.html
+++ b/document-types/asylum_support_decision.html
@@ -368,7 +368,7 @@
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/mq-v-secretary-of-state-for-the-home-department-as-13-08-30300">MQ v Secretary of State for the Home Department: AS/13/08/30300</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/vc-v-secretary-of-state-for-the-home-department-as-02-04-2505">VC v Secretary of State for the Home Department: AS/02/04/2505</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/xzc-v-secretary-of-state-for-the-home-department-as-11-08-27297">XZC v Secretary of State for the Home Department: AS/11/08/27297</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/ts-v-secretary-of-state-for-the-home-department-as-02-04-2462">TS v Secretary of State for the Home Department: AS/02/04/2462</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/es-v-secretary-of-state-for-the-home-department-as-05-04-9159">ES v Secretary of State for the Home Department: AS/05/04/9159</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/yi-v-secretary-of-state-for-the-home-department-as-13-07-30154">YI v Secretary of State for the Home Department: AS/13/07/30154</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/ab-v-secretary-of-state-for-the-home-department-as-14-07-31653">AB v Secretary of State for the Home Department: AS/14/07/31653</a></li>
 </ul>
