--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.copelandbc.gov.uk/" class="govuk-link">Copeland Borough Council</a></li>
-      <li><a href="http://www.selby.gov.uk" class="govuk-link">Selby District Council</a></li>
-      <li><a href="http://www.boroughofpoole.com" class="govuk-link">Borough of Poole Council</a></li>
-      <li><a href="https://www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/" class="govuk-link">Care homes - NHS</a></li>
-      <li><a href="http://www.barnet.gov.uk/" class="govuk-link">London Borough of Barnet Council</a></li>
-      <li><a href="http://www.staffsmoorlands.gov.uk" class="govuk-link">Staffordshire Moorlands District Council</a></li>
-      <li><a href="http://www.pembrokeshire.gov.uk" class="govuk-link">Pembrokeshire County Council</a></li>
-      <li><a href="http://www.bromley.gov.uk" class="govuk-link">London Borough of Bromley Council</a></li>
-      <li><a href="http://www.cravendc.gov.uk" class="govuk-link">Craven District Council</a></li>
+      <li><a href="http://www.richmondshire.gov.uk" class="govuk-link">Richmondshire District Council</a></li>
+      <li><a href="http://www.southhams.gov.uk" class="govuk-link">South Hams District Council</a></li>
       <li><a href="http://www.bournemouth.gov.uk" class="govuk-link">Bournemouth Borough Council</a></li>
+      <li><a href="http://www.barking-dagenham.gov.uk" class="govuk-link">London Borough of Barking and Dagenham Council</a></li>
+      <li><a href="http://www.west-norfolk.gov.uk" class="govuk-link">King&rsquo;s Lynn and West Norfolk Borough Council</a></li>
+      <li><a href="http://www.maldon.gov.uk" class="govuk-link">Maldon District Council</a></li>
+      <li><a href="http://www.uttlesford.gov.uk" class="govuk-link">Uttlesford District Council</a></li>
+      <li><a href="http://www.preston.gov.uk" class="govuk-link">Preston City Council</a></li>
+      <li><a href="http://www.carlisle.gov.uk" class="govuk-link">Carlisle City Council</a></li>
+      <li><a href="http://www.highpeak.gov.uk" class="govuk-link">High Peak Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
