--- a/document-types/asylum_support_decision.html
+++ b/document-types/asylum_support_decision.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/xzc-v-secretary-of-state-for-the-home-department-as-11-08-27297">XZC v Secretary of State for the Home Department: AS/11/08/27297</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/ts-v-secretary-of-state-for-the-home-department-as-02-04-2462">TS v Secretary of State for the Home Department: AS/02/04/2462</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/mm-v-secretary-of-state-for-the-home-department-as-11-02-26112">MM v Secretary of State for the Home Department: AS/11/02/26112</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/yi-v-secretary-of-state-for-the-home-department-as-13-07-30154">YI v Secretary of State for the Home Department: AS/13/07/30154</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/hm-v-secretary-of-state-for-the-home-department-as-15-07-33510">HM v Secretary of State for the Home Department: AS/15/07/33510</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=asylum_support_decision&amp;count=10">Source query from Search API</a></p>
 
